--- a/pom.xml
+++ b/pom.xml
@@ -250,6 +250,19 @@
       <version>4.12.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat-catalina</artifactId>
+      <version>8.5.100</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat-servlet-api</artifactId>
+      <version>8.5.100</version>
+      <scope>provided</scope>
+    </dependency>
+
 
   </dependencies>
   <build>
