--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,6 +37,10 @@
     <error-code>404</error-code>
     <location>/views/web/error-404.jsp</location>
   </error-page>
+  <error-page>
+    <exception-type>java.lang.Throwable</exception-type>
+    <location>/views/web/error-404.jsp</location>
+  </error-page>
 
   <listener>
     <listener-class>com.webecommerce.configuration.MyAppContextListener</listener-class>
