fix attack Buffer Overflow, Cross-Domain JavaScript Source File Inclusion

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -21,5 +21,7 @@ username_not_null=Tên đăng nhập không được để trống.
 password_not_null = Mật khẩu không được để trống.
 username_not_nullpassword_not_null = Tên đăng nhập và mật khẩu không được để trống.
 please-login-before-check-out = Vui lòng đăng nhập trước khi đặt hàng.
+khong-xac-dinh = Lỗi không xác dịnh
+invalid_action = Hành động không hợp lệ. Bạn đang tấn công web ?
 
 
