--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
       <!--          <version>2.15.0</version> &lt;!&ndash; Use a version compatible with your Jackson version &ndash;&gt;  -->
     </dependency>
     <dependency>
+      <groupId>org.owasp.encoder</groupId>
+      <artifactId>encoder</artifactId>
+      <version>1.2.3</version>
+    </dependency>
+    <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
       <version>${commons-beanutils.version}</version>
